# ecom_project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/order_service/: Dockerfile  pyproject.toml
